--- a/Backend/templates/local_register.html
+++ b/Backend/templates/local_register.html
@@ -15,6 +15,6 @@
         <button type="submit">Register</button>
     </form>
 
-    <p>Already have an account? <a href="/local_auth/local_login_page">Login here</a></p>
+    <p>Already have an account? <a href="/local_auth/local_login">Login here</a></p>
 </body>
 </html>
